@@ -12,6 +12,8 @@
 	bounds.
 	* src/cvlview.cpp: Use the current view by default for the Save and
 	Copy actions.
+	* src/cvlview.h, src/cvlview.cpp, src/dataset_selector.h: Add the
+	capability to save videos to multi-frame PPM files.
 
 2008-07-02  Martin Lambers <marlam@marlam.de>
 
